<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.tzi.use</groupId>
    <artifactId>plugin_monitor</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>monitor</module>
        <module>adapter/Python</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.tzi.use</groupId>
                <artifactId>use-core</artifactId>
                <version>7.1.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.tzi.use</groupId>
                <artifactId>use-gui</artifactId>
                <version>7.1.1</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.tzi.use</groupId>
                <artifactId>monitor</artifactId>
                <version>1.0-SNAPSHOT</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
